updated profile template, added default pf pic w/ conditional statement

--- a/main_app/templates/calendar.html
+++ b/main_app/templates/calendar.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %} 
+{% load static %}
 
 {% block title %}
 Planify | My Calendar 
@@ -6,7 +7,11 @@ Planify | My Calendar
 {% block content %} 
 <div class="header-container">
     <h1 class="header">{{ user }}'s Calendar</h1>
-    <span><img style="border-radius: 50%; object-fit: cover;" src="{{ user.profile.profile_pic.url }}" width="60px" height="60px" alt=""></span>
+    {% if user.profile.profile_pic %}
+    <a href="{% url 'profile' user.id%}"><span><img style="border-radius: 50%; object-fit: cover;" src="{{ user.profile.profile_pic.url }}" width="60px" height="60px" alt=""></span></a>
+    {% else %}
+    <a href="{% url 'profile' user.id%}"><span><img style="border-radius: 50%; object-fit: cover;" src="{% static 'images/default_pf.png' %}" width="60px" height="60px" alt=""></span></a>
+    {% endif %}
     <p><a href="{% url 'events' %}">Events List View</a> </p>
 </div>
 <div class="cal-container">
