updated edit account view bug

--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -4,5 +4,14 @@
 Planify | Home Page
 {% endblock %}
 {% block content %} 
-<h1>This is the home page!</h1>
+<div class="home-container">
+    <div class="header-container">
+        <h1 class="header">Welcome to Planify!</h1>
+        <h2 class="sub-header">The only organization tool you will ever need!</h2>
+    </div>
+
+
+
+    
+</div>
 {% endblock %}
