--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -25,6 +25,7 @@
             </a>
             <div class="drop-content">
                 <a href="{% url 'edit_profile' user.id%}" id="drop-item" class="nav-link">Edit Profile</a>
+                <a href="{% url 'edit_account' user.id%}" id="drop-item" class="nav-link">Edit Account</a>
             </div>
         </div>
         <a href="/calendar/" class="nav-link">Calendar</a>
