updated layout and content for auth pages

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <nav class="nav-bar">
-        <a href="/" class="nav-logo"><h1 class="nav-logo">.planify</h1></a>
+        <a href="/" class="nav-logo"><img width="180vw"  src="{% static 'images/planify_logo_nav.png' %}" class="nav-logo"></a>
         <a href="/" class="nav-link">Home</a>
         <a href="/about/" class="nav-link">About</a>
         {% if user.is_authenticated %}
