--- a/main_app/templates/register.html
+++ b/main_app/templates/register.html
@@ -31,6 +31,12 @@ Planify | Register for a Planify Account!
     </div>
 </div>
 
+    <div class="reg-right">
+        <h3 class="reg-text">Planify is a productivity app that allows you to plan projects, events and day-to-day tasks, using a simply user interface!</h3>
+        <div class="reg-main">
+            <img src="{% static 'images/cal_clock.png' %}" alt="">
+        </div>
+    </div>
 
 
 </div> 
