--- a/main_app/static/styles/styles.css
+++ b/main_app/static/styles/styles.css
@@ -159,6 +159,11 @@ body {
     text-shadow: .5px .5px .5px black;
 
 }
+.btn-auth:hover {
+    transform: scale(1.08);
+    transition: .3s all ease;
+
+}
 
 
 
@@ -245,8 +250,24 @@ nav .nav-link:hover, .dropdown:hover .drop-link {
 
 .reg-page {
     text-align: center;
-    display: flex;
+    display: inline-flex;
 }
+
+.reg-left {
+    flex: 4;
+}
+
+.reg-right {
+    flex: 6;
+    margin-top: 21vh;
+}
+
+.login-right {
+    flex: 6;
+    margin-top: 6vh;
+
+}
+
 .reg-header {
     margin-bottom: .5vh;
 }
@@ -285,6 +306,8 @@ nav .nav-link:hover, .dropdown:hover .drop-link {
 .form-group form input {
     border-radius: 15px;
     align-self: center;
+    border: 2px black solid;
+    box-shadow: 2px 2px 2px black;
 }
 
 /* CALENDAR PAGE STYLING */
