--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -57,5 +57,22 @@
 
     {% endblock %} 
     </div>
+    <footer>
+        <div class="footer-container">
+            <div class="footer-left">
+                <img src="{% static 'images/planify_logo_footer.png' %}" alt="">
+            </div>
+            <div class="footer-center">
+                <p><a href="mailto:hege@example.com">Subscribe to Our Newsletter</a></p>
+
+            </div>
+            <div class="footer-right">
+                <p><a href="">Privacy Policy</a></p>
+                <p><a href="">Terms & Conditions</a></p>
+                <p><a href="">Contact Us</a></p>
+            </div>
+        </div>
+        <p class="copyright" >Ⓒ Copyright planify 2022</p>
+      </footer>
 </body>
 </html>
