--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -13,7 +13,13 @@ Planify | Home Page
         <div class="newsletter">
             <h3 class="sub-header">Subscribe to Our Newsletter</h3>
             <p>As you can see, Planify is continuosly being developed. To learn more about new features, patches, and app updates - be sure to subscribe below!</p>
-        
+            {% if messages %}
+            <div class="messages">
+                {% for message in messages %}
+                <p class="message-text">{{ message }}</p>
+                {% endfor %}
+            </div>
+            {% endif %}
             <form action="" method="post">
                 {% csrf_token %}
                 {{ form }}
