--- a/main_app/templates/contact.html
+++ b/main_app/templates/contact.html
@@ -20,7 +20,7 @@ Planify | Home Page
             {% endif %}
         <form action="" method="post">
             {% csrf_token %}
-            {{ form }}
+            {{ form.as_p }}
             <button type="submit" class="btn-add">Submit</button>
         </form>
     </div>
