--- a/main_app/templates/edit_account.html
+++ b/main_app/templates/edit_account.html
@@ -4,19 +4,20 @@
 Planify | Edit Account Info
 {% endblock %}
 {% block content %} 
-<div class="reg-page">
-<h1 class="header">Edit Account!</h1>
 
-
-<form action="" method="post">
-    {% csrf_token %}
+<div class="edit-account">
+    <h1 class="header">Edit Account!</h1>
+    <span>Update your account information here. To edit your user profile, click </span><a href="{% url 'edit_profile' user.id%}">here.</a>
+    <form action="" method="post">
+        {% csrf_token %}
+        
+        {{form.as_p}}
     
-    {{form.as_p}}
+        <button style="margin-bottom: 3vh;" class="btn-one" type="submit">Update</button>
+    </form>
 
-    <button class="btn-one" type="submit">Update</button>
+    <a href="{% url 'change_password' user.id %}"><button class="btn-del">Change Password</button></a>
 
-</form>
+</div>
 
-
-</div> 
 {% endblock %}
