--- a/main_app/templates/event_list.html
+++ b/main_app/templates/event_list.html
@@ -12,7 +12,7 @@ Planify | Event List
 
 <table style="margin-top: 2em;" >
     <tr>
-        <th class="sub-header" style="font-size: larger;">Events</th>
+        <th class="sub-header" style="font-size: larger;">Events Pending: {{ count }}</th>
         <th></th>
         <th></th>
     </tr>
