--- a/main_app/static/styles/styles.css
+++ b/main_app/static/styles/styles.css
@@ -473,6 +473,38 @@ footer {
 
 /* PROFILE PAGE STYLING */
 
+.profile-lower {
+    display: flex;
+}
+
+.profile-upper {
+    text-align: center;
+    background-color:lightgoldenrodyellow;
+    padding: 3rem;
+    
+}
+
+
+
+.profile-left {
+    flex: 4;
+    text-align: center;
+}
+
+.profile-center {
+    flex: 4;
+    text-align: center;
+}
+
+.profile-right {
+    flex: 4;
+    text-align: center;
+}
+
+.profile-page {
+    border-radius: 12px;
+}
+
 
 
 
@@ -489,12 +521,23 @@ footer {
     
 }
 
-input[type=text], input[type=email], textarea {
+.form-two input[type=text], .form-two input[type=email], .form-two input[type=url],
+input[name=title], textarea {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
    }
+
+input[type=file] {
+    color: royalblue;
+}
+
+input[type=file] button { 
+    background-color: royalblue;
+
+
+}
 
 /* EDIT ACCOUNT/PROFILE PAGE */
 
@@ -511,11 +554,34 @@ label[for=id_groups] {
 
 .form-two {
     margin: auto;
-    text-align: center;
+    text-align: left;
     width: 40vw;
     margin-top: 6vh;
 }
 
+.form-left {
+    
+    width: 25vw;
+    margin-top: 2vh;
+
+}
+
 .sub-text {
     padding-bottom: 5vh;
+}
+
+.update-form{
+    list-style: none;
+}
+
+.home-upper {
+    background-image: url("../images/clock_slider.jpeg");
+    color: royalblue;
+    padding: 35px;
+}
+
+.home-lower {
+    background-image: url("../images/darkclock.jpeg");
+    padding: 35px;
+
 }
