--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -4,5 +4,6 @@
 Planify | Home Page
 {% endblock %}
 {% block content %} 
-<h1>This is the About page!</h1>
+<h1>About Planify</h1>
+<p style="font-weight: 600;">At its core, Planify is a simply productivity app, designed to help users keep track of daily events, projects, reminders, and more! More than just a To-Do List, Planify allows you to create events, which can be displayed on both a calendar and list view. From your list view, the event takes on a life of its own, and users can add specific tasks that might be a part of that event, steps needed to complete that event, and even add individuals who will take part in the event known as 'Collaborators'. We hope to grow Planify into more than just an event calendar. In future iterations, we would like for it to function as a user's Dashboard to the internet, where they can use their profile to check the latest news headlines, from specific areas they are interested in, view their local weather, check their social feeds, and much more. In addition, the projects or events will soon include a 'Kanban-Like' environment, where users can collaborate and plan projects just as well as they would with other applications specifically designed for such a use. While such a feature might be targeted more so towards developers, we hope to introduce such features to everday users and show them how such features might prove valuable in everyday life.</p>
 {% endblock %}
